objects/tffa__Beneficiary__c.object
<CustomObject>
    <description>A beneficiary typically refers to someone who is eligible to receive distributions from deposits upon death of primary owner of account. Beneficiary capture typically happens for Certificate Deposits.
Designating a beneficiary not only ensures the CD will not have to go through probate when the applicant dies.</description>
    <fields>
        <fullName>CZDesignation__c</fullName>
        <description>Designation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZFisRelnshipCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if FIS Relnship is created</description>
        <label>FIS Relnship Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZMDMPartyID__c</fullName>
        <description>MDM Global Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM Global ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Party</relationshipLabel>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer number a unique identifier for customer on core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Beneficiary address</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>Beneficiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application object</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>Beneficiaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__BirthDate__c</fullName>
        <description>Date of birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FirstName__c</fullName>
        <description>First name of beneficiary</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsMinor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Individual is minor by law. Default is false</description>
        <label>Is Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsPEP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the beneficiary is a Politically exposed person.</description>
        <label>Is Politically exposed person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Last4NationalIdentifierValue__c</fullName>
        <description>Captures Last 4 characters of National Identifier Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 of National identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LastName__c</fullName>
        <description>Last name of beneficiary</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LegalName__c</fullName>
        <description>The legal name of a business is the official name of the person or entity that owns a business.For limited partnerships, LLCs, and corporations, the legal name of the business is the name registered with the state filing office</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MiddleName__c</fullName>
        <description>The middle name of the beneficiary.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NationalIdentifierType__c</fullName>
        <description>Classifies identification numbers used by the Internal Revenue Service (IRS) in the administration of tax laws.</description>
        <label>National identifier type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__NationalIdentifierType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__NationalIdentifierValue__c</fullName>
        <description>The value of the taxpayer identifier as assigned by the IRS to the individual or legal entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>National identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OFACOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If OFAC status was overridden.</description>
        <label>OFAC Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OFACOverrideComments__c</fullName>
        <description>Additional notes on why the OFAC Status was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OFAC Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__OFACRemarks__c</fullName>
        <description>Additional comments/reasons supporting the OFAC result.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OFAC Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__OFACStatus__c</fullName>
        <description>OFAC status of the beneficiary.</description>
        <label>OFAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationType__c</fullName>
        <description>Type of Organization. This governs the structure of the business.</description>
        <label>Organization type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <defaultValue>&quot;INDIVIDUAL&quot;</defaultValue>
        <description>Party type of associated beneficiary</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrefillSourceId__c</fullName>
        <description>The unique identifier of the source entity used for prefilling the beneficiary information.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The unique identifier of the source entity used for prefilling the beneficiary information.</inlineHelpText>
        <label>Prefill source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillSource__c</fullName>
        <description>The source of prefill data for the beneficiary information. e.g. PARTY (source is a customer), BENEFICIARY (source is a beneficiary existing in other applications), APPLICANT (source is an applicant in the submission)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the source of prefill data for the beneficiary information. e.g. PARTY (source is a customer), BENEFICIARY (source is a beneficiary existing in other applications), APPLICANT (source is an applicant in the submission)</inlineHelpText>
        <label>Prefill source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the data was prefilled using beneficiary or applicant information of other application.</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Prefix__c</fullName>
        <description>Title preceding the name of an beneficiary (Judge, Mr. Mrs. Colonel).</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Prefix</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the beneficiary.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the beneficiary</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tffa__RelationCodeName__c</fullName>
        <description>Name of the relation code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation code name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RelationCodeValue__c</fullName>
        <description>Value of the relation code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation code value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RelationCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Captures how beneficiary is related to primary Party.</description>
        <inlineHelpText>Captures how beneficiary is related to primary Party.</inlineHelpText>
        <label>Relation Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Relation code not active.</errorMessage>
            <filterItems>
                <field>tffa__PartyRelationCode__c.tffa__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__PartyRelationCode__c</referenceTo>
        <relationshipLabel>Beneficiaries</relationshipLabel>
        <relationshipName>Beneficiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SharePercentage__c</fullName>
        <description>Percentage of share</description>
        <label>Share percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Ssn__c</fullName>
        <description>SSN of beneficiary</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Suffix__c</fullName>
        <description>The name suffix of the beneficiary. (E.g., JR = Junior, SR = Senior, etc.)</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Suffix</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__TrustType__c</fullName>
        <description>Type/class of beneficiary trust based on their purpose</description>
        <label>Trust type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__TrustType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the party. Allowed values are - PRIMARY, CONTINGENT</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BeneficiaryType</valueSetName>
        </valueSet>
    </fields>
    <label>Beneficiary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>